mockbin/overlays/east/deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  labels:
    istio-injection: enabled
  name: east
spec: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: east
    app.kubernetes.io/component: mockbin
    app.kubernetes.io/instance: mockbin
    version: v1
  name: east
  namespace: east
spec:
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: east
    deployment: east
    version: v1
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: east
    app.kubernetes.io/component: mockbin
    app.kubernetes.io/instance: mockbin
    version: v1
  name: east
  namespace: east
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: east
      deployment: east
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        sidecar.istio.io/inject: "true"
        app: east
        deployment: east
        version: v1
    spec:
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: SRV_NAME
          valueFrom:
            configMapKeyRef:
              key: SRV_NAME
              name: instance
        - name: ZIPKIN_ENDPOINT
          value: http://jaeger-collector.apps.west.example.com:80
        - name: WEB_CONCURRENCY
          value: "1"
        - name: CONFIG
          value: /var/run/oidc/client.json
        image: quay.io/rhn_support_milang/mockbin:latest
        imagePullPolicy: Always
        name: east
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/oidc/client.json
          name: oidc-secret
          readOnly: true
          subPath: client.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 3
      volumes:
      - name: oidc-secret
        secret:
          defaultMode: 420
          secretName: mockbin-oidc
      - configMap:
          name: instance
          optional: true
        name: instance
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: east
  namespace: east
spec:
  host: east.east.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: east
  namespace: east
spec:
  gateways:
  - istio-system/frontend-gateway-example
  hosts:
  - mockbin.apps.east.example.com
  http:
  - route:
    - destination:
        host: east.east.svc.cluster.local
        port:
          number: 8080
      weight: 100
  tls:
  - match:
    - port: 443
      sniHosts:
      - mockbin.apps.east.example.com
    route:
    - destination:
        host: east.east.svc.cluster.local
        port:
          number: 8080
      weight: 100
